fixed overflow issue on home page

--- a/Assets/styles/index.css
+++ b/Assets/styles/index.css
@@ -8,14 +8,19 @@ body{
 
 }
 main{
-  margin-top: 60%;
+  margin-top: -90%;
   background-color: #3a5841;
   padding-top:50%;
   max-width: 100%;
   padding-left: 17%;
   padding-right: 17%;
 }
-
+#homeImagesContainer{
+  position: relative;
+  width:100%;
+  height: 150vw;
+  overflow-x: hidden
+}
 #home-background img{
   width: 50%;
   max-width: 50%;
@@ -197,13 +202,7 @@ nav{
 }
 
 
-#container{
-  margin:0;
-  padding: 0;
-  overflow: hidden;
-  width: 100%;
 
-}
 /* Links inside the dropdown */
 .dropdown-content a {
   float: none;
